# autonovel-ollama

./: .env.example  GEMINI.md  README.md  adversarial_edit.py  apply_cuts.py  build_arc_summary.py  build_outline.py  compare_chapters.py  draft_chapter.py  evaluate.py  gen_art.py  gen_art_directions.py  gen_audiobook.py  gen_audiobook_script.py  gen_brief.py  gen_canon.py  gen_characters.py  gen_mystery.py  gen_outline.py  gen_outline_part2.py  gen_revision.py  gen_voice.py  gen_world.py  llm.py  paths.py  pyproject.toml  quick_test.py  reader_panel.py  review.py  run_drafts.py  run_pipeline.py  seed.py  voice_fingerprint.py
tests/: test_llm.py
